[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/TicTacToe.gd" type="Script" id=1]

[node name="TicTacToe" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 416.0
margin_top = 128.0
margin_right = 608.0
margin_bottom = 408.0
color = Color( 0.0509804, 0.00784314, 0.0784314, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="ColorRect" parent="ColorRect"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 32.0
color = Color( 0.223529, 0.223529, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/Title"]
margin_left = 24.0
margin_right = 152.0
margin_bottom = 24.0
text = "TIC TAC TOE"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="ColorRect"]
margin_left = 8.0
margin_top = 40.0
margin_right = 56.0
margin_bottom = 88.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="ColorRect"]
margin_left = 72.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 88.0
text = "2"

[node name="Button3" type="Button" parent="ColorRect"]
margin_left = 136.0
margin_top = 40.0
margin_right = 184.0
margin_bottom = 88.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="ColorRect"]
margin_left = 8.0
margin_top = 104.0
margin_right = 56.0
margin_bottom = 152.0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="ColorRect"]
margin_left = 72.0
margin_top = 104.0
margin_right = 120.0
margin_bottom = 152.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="ColorRect"]
margin_left = 136.0
margin_top = 104.0
margin_right = 184.0
margin_bottom = 152.0
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="ColorRect"]
margin_left = 8.0
margin_top = 168.0
margin_right = 56.0
margin_bottom = 216.0
text = "7"

[node name="Button8" type="Button" parent="ColorRect"]
margin_left = 72.0
margin_top = 168.0
margin_right = 120.0
margin_bottom = 216.0
text = "8"

[node name="Button9" type="Button" parent="ColorRect"]
margin_left = 136.0
margin_top = 168.0
margin_right = 184.0
margin_bottom = 216.0
text = "9"

[node name="ButtonRestart" type="Button" parent="ColorRect"]
margin_left = 8.0
margin_top = 232.0
margin_right = 88.0
margin_bottom = 272.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="ColorRect"]
margin_left = 104.0
margin_top = 232.0
margin_right = 184.0
margin_bottom = 272.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="ColorRect/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="ColorRect/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ColorRect/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="ColorRect/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="ColorRect/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="ColorRect/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="ColorRect/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="ColorRect/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="ColorRect/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="ColorRect/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="ColorRect/ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="timeout" from="Timer" to="." method="TimerTimeout"]
